infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novai-ingress
  namespace: novai-production
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "novai-global-ip"
    networking.gke.io/managed-certificates: "novai-certificate"
    networking.gke.io/v1beta1.FrontendConfig: "novai-frontend-config"
spec:
  rules:
    - host: api.novaai.id
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
    - host: novaai.id
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-frontend
                port:
                  number: 80
